ch23_ingress/ingress-secrue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mycredentials
    nginx.ingress.kubernetes.io/auth-realm: "Get lost unless you have a password"
spec:
  rules:
    - host: "queue.fleetman.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-queue
                port:
                  number: 8161
